# iagos-notebook-wildfires

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  sonar-project.properties
.github/workflows/: sonar.yml
notebooks/: flight_search_download_demo_IRISCC_v2.ipynb
scripts/: generate_credentials.py
src/fr/: __init__.py
src/fr/aeris/: __init__.py  iriscc.py
src/fr/aeris/auth/: __init__.py  authentication.py  encryption.py  generate_credentials.py
src/fr/aeris/iagos/: __init__.py  iriscc.py
src/fr/aeris/iagos/auth/: __init__.py  authentication.py  encryption.py
