[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fr.aeris"
version = "0.1.0"
description = "IAGOS Flight Search & Download Notebooks with SSO Authentication"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "requests>=2.31.0",
    "python-keycloak>=3.0.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
